<resources>
    <string name="app_name">android_food</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_rate">Rate</string>
    <string name="menu_share">Share</string>
    <string name="menu_privacy">Privacy</string>
    <string name="menu_FeedBack">FeedBack</string>
    <string name="menu_gift">Gift</string>
    <string name="menu_info">Info</string>
</resources>