<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_rate"
            android:icon="@drawable/star"
            android:title="@string/menu_rate" />
        <item
            android:id="@+id/nav_share_fb"
            android:icon="@drawable/network"
            android:title="@string/menu_share" />
        <item
            android:id="@+id/nav_privacy"
            android:icon="@drawable/smartphone"
            android:title="@string/menu_privacy" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/satisfaction"
            android:title="@string/menu_FeedBack" />
        <item
            android:id="@+id/nav_gift"
            android:icon="@drawable/giftbox"
            android:title="@string/menu_gift" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/resume"
            android:title="@string/menu_info" />
    </group>
</menu>